# AntagonTelegramBot

./: .gitignore  README.md  main.py  pyproject.toml
bot/: bot.py
core/: logging.py  yaml.py
